fix code smells and checkstyle